# GameEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GameEngine.sln  GenerateProjects.bat  README.md  dependencies.lua  premake5.lua  vcpkg.json
Editor/: CMakeLists.txt  imgui.ini
Editor/assets/models/cube/: cube.dae
Editor/assets/models/free-low-poly-game-assets/: GameLevel_present.mtl  license.txt
Editor/assets/models/lotus-lord-of-the-luscious-woods/: license.txt
Editor/assets/models/sci-fi_male_character/: license.txt
Editor/assets/scene/: cube.xengine  shadow.xengine  terrain.xengine
Editor/assets/scene/demo/: animation.engine  animation.xengine  collision-detection.engine  collisionDetection.engine  collisionDetection.xengine  cube.engine  default.engine  frustumCulling.engine  scene-camera.engine  sceneCamera.engine  sceneCamera.xengine  shadow.engine  skybox.engine  sprite-renderer.engine  wall.engine
Editor/assets/shaders/: BoundingBox.glsl  Default.glsl  LightBox.glsl  Shadow.glsl  Skybox.glsl  Terrian.glsl  TessellationTerrain.glsl  Texture.glsl
Editor/assets/shaders/Bloom/: Blur.glsl  FinalScene.glsl
Editor/assets/shaders/Compute/: NormalMap.glsl  SplatMap.glsl
Editor/assets/shaders/Debug/: ShadowDebug.glsl
Editor/src/: Editor.cpp  EditorLayer.cpp  EditorLayer.h  ExampleLayer.cpp  ExampleLayer.h
Editor/src/Gui/: Dockspace.cpp  Dockspace.h  IGui.h  Menubar.h  Toolbar.cpp  Toolbar.h
Editor/src/Gui/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  OutputLogPanel.cpp  OutputLogPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Editor/src/Gui/Sidebar/: Menubar.cpp  Menubar.h  Statusbar.cpp  Statusbar.h  Toolbar.cpp  Toolbar.h
Editor/src/Layout/: Menubar.cpp  Menubar.h  Toolbar.cpp  Toolbar.h  Widget.h
Editor/src/Layout/Panel/: ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Editor/src/Panel/: ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  premake5.lua
Engine/src/: Engine.h  enginepch.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Engine/src/Engine/Configuration/: Configuration.cpp  Configuration.h
Engine/src/Engine/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  TimeStep.h  Window.h
Engine/src/Engine/Debug/: FPSCalculator.cpp  FPSCalculator.h  Instrumentor.h
Engine/src/Engine/Effect/: BloomEffect.cpp  BloomEffect.h
Engine/src/Engine/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/Factory/: BoundingBoxFactory.cpp  BoundingBoxFactory.h  BufferFactory.cpp  BufferFactory.h  CollisionFactory.cpp  CollisionFactory.h  FramebufferFactory.cpp  FramebufferFactory.h  GraphicsFactory.cpp  GraphicsFactory.h  ModelFactory.h  ShaderFactory.cpp  ShaderFactory.h  TerrainFactory.cpp  TerrainFactory.h  TextureFactory.cpp  TextureFactory.h  VertexArrayFactory.h
Engine/src/Engine/File/: File.cpp  File.h  FileDialog.h  FileExtension.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Engine/Math/: Math.cpp  Math.h  Transform.h
Engine/src/Engine/Polyhedron/: Triangle3D.cpp  Triangle3D.h  Vertex3D.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  RendererCommand.cpp  RendererCommand.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h
Engine/src/Engine/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/Engine/Util/: AssimpUtil.h  BufferLayoutUtil.cpp  BufferLayoutUtil.h  Dictionary.h  LinkedList.h  OrderedLinkedList.h  PlatformUtil.h  Vector3DHash.h  YAML.h
Engine/src/Engine/Utils/: PlatformUtils.h
Engine/src/Platform/Assimp/: AssimpAnimation.cpp  AssimpAnimation.h  AssimpBone.cpp  AssimpBone.h  AssimpMaterial.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  AssimpNode.cpp  AssimpNode.h  Material.h
Engine/src/Platform/Linux/: LinuxFileDialog.cpp
Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsAPI.cpp  OpenGLShader.cpp  (+10 more)
Engine/util/glad/: premake5.lua
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  imgui.ini  premake5.lua
Sandbox/asserts/shaders/: Color.glsl  Texture.glsl
Sandbox/src/: Example.cpp  Example.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Test/: CMakeLists.txt
Test/src/Physics/: CollisionTest.cpp
Test/src/Renderer/: EditorCameraTest.cpp  UniformBufferLayoutTest.cpp
Test/src/Scene/: EntityTest.cpp  SceneCameraTest.cpp  SceneTest.cpp
Test/src/Util/: OrderedLinkedListTest.cpp
xEditor/: CMakeLists.txt  imgui.ini  premake5.lua
xEditor/asserts/scene/: animation.xengine  cube.xengine  example.yaml  frustumCulling.xengine  shadow.xengine  skybox.xengine  terrain.xengine  test.xengine
xEditor/asserts/shaders/: Animation.glsl  Color.glsl  Default.glsl  Shadow.glsl  Skybox.glsl  Texture.glsl
xEditor/assets/scene/: animation.xengine  frustumCulling.xengine
xEditor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  ExampleLayer.cpp  ExampleLayer.h
xEditor/src/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
(+372 files in other folders)
